<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".LogIn">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/botHalf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_above="@+id/user_password"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"

            android:background="@drawable/bg_white"
            android:hint="Email:"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="8dp"

            android:background="@drawable/bg_white"
            android:hint="Password:"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="273dp"
            android:layout_height="224dp"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:src="@drawable/fp3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"

            android:background="@color/colorPrimaryDark"
            android:text="Log In"
            android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password" />

        <TextView
            android:id="@+id/not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="Not registered? Sign up!"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="397dp"
            android:layout_height="303dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="460dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trees_blank" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="123dp"
            android:layout_height="129dp"
            android:layout_marginStart="144dp"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="144dp"
            android:layout_marginRight="144dp"
            android:layout_marginBottom="188dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:srcCompat="@drawable/sage" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="169dp"
            android:layout_marginRight="169dp"
            android:layout_marginBottom="280dp"
            android:text="Powered by"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_registered"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>