...
        android:layout_height="700dp"
        android:orientation="vertical"
        tools:ignore="ExtraText">


        <ImageView
            android:id="@+id/logo_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/currentPoints"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/sage" />
...
