<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".SignUp">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/botHalf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#87D05B"
        android:paddingTop="20dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_above="@+id/email_sign_up"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"

            android:background="@drawable/bg_white"
            android:hint="First name:"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/last_name"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_above="@+id/email_sign_up"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"

            android:background="@drawable/bg_white"
            android:hint="Last name:"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_above="@+id/password_sign_up"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"

            android:background="@drawable/bg_white"
            android:hint="Email:"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"

            android:background="@drawable/bg_white"
            android:hint="Password:"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="357dp"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"

            android:background="@drawable/bg_white"
            android:hint="Password:"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_sign_up" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="255dp"
            android:layout_height="205dp"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/fp3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_up"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"

            android:background="#348A00"
            android:text="Sign up"
            android:textColor="#f0f0f0"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="337dp"
            android:layout_height="252dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="472dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trees_blank" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="123dp"
            android:layout_height="129dp"
            android:layout_marginStart="144dp"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="472dp"
            android:layout_marginEnd="144dp"
            android:layout_marginRight="144dp"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sage" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="482dp"
            android:layout_marginEnd="169dp"
            android:layout_marginRight="169dp"
            android:layout_marginBottom="260dp"
            android:text="Powered by"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>